--- a/test/style.css
+++ b/test/style.css
@@ -31,14 +31,31 @@ body{
 
 #simpleVideoPlayer .contentControls{
   position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   bottom: 0;
   width: 100%;
   height: 35px;
-  padding: 5px;
-  background-color: rgba(0,0,0, .25);
+  padding: 5px 10px;
+  background-color: rgba(0,0,0, .35);
   transform: translateY(100%);
   transition: transform .5s;
 }
 #simpleVideoPlayer:hover .contentControls{
   transform: translateY(0);
+}
+
+#simpleVideoPlayer .barControl{
+  width: 50%;
+  height: 5px;
+  background-color: rgba(255,255,255, .35);
+  border-radius: 25px;
+}
+
+#simpleVideoPlayer .barProgress{
+  width: 45px;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 25px;
 }
