Añadido el evento Play/Pause, también habilitada la barra de progreso para mostrar el transcurso del video.

--- a/test/style.css
+++ b/test/style.css
@@ -54,7 +54,7 @@ body{
 }
 
 #simpleVideoPlayer .barProgress{
-  width: 45px;
+  width: 0%;
   height: 100%;
   background-color: #fff;
   border-radius: 25px;
