--- a/test/style.css
+++ b/test/style.css
@@ -87,3 +87,51 @@ body{
   bottom:-5px;
   left:5px;
 }
+
+.buttonsControl{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn{
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 25px;
+  height: 25px;
+}
+.btn svg{
+  fill: #fff;
+  height: 25px;
+  width: 25px;
+}
+
+.volumeContent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.volumeControl{
+  -webkit-appearance: none;
+  width: 65px;
+  height: 7px;
+  margin-left: 5px;
+  border-radius: 5px;
+  background-color: rgba(255,255,255, .35);
+  outline: none;
+  transform: scaleX(0);
+  transform-origin: left center;
+  transition: transform .5s;
+}
+.volumeContent:hover .volumeControl{
+  transform: scaleX(1);
+}
+.volumeControl::-webkit-slider-thumb, .volumeControl::-moz-range-thumb{
+  -webkit-appearance: none;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+}
