--- a/test/style.css
+++ b/test/style.css
@@ -39,11 +39,11 @@ body{
   height: 35px;
   padding: 5px 10px;
   background-color: rgba(0,0,0, .35);
-  transform: translateY(100%);
-  transition: transform .5s;
+  transform: translate3d(0, 100%, 0);
+  transition: transform .40s;
 }
 #simpleVideoPlayer:hover .contentControls{
-  transform: translateY(0);
+  transform: translate3d(0, 0, 0);
 }
 
 #simpleVideoPlayer .barControl{
@@ -100,6 +100,7 @@ body{
   outline: none;
   width: 25px;
   height: 25px;
+  cursor: pointer;
 }
 .btn svg{
   fill: #fff;
@@ -116,21 +117,34 @@ body{
   -webkit-appearance: none;
   width: 65px;
   height: 7px;
-  margin-left: 5px;
+  margin: 0 5px;
   border-radius: 5px;
   background-color: rgba(255,255,255, .35);
   outline: none;
-  transform: scaleX(0);
+  transform: scale3d(0,1,1);
   transform-origin: left center;
-  transition: transform .5s;
+  transition: transform .35s;
 }
 .volumeContent:hover .volumeControl{
-  transform: scaleX(1);
+  transform: scale3d(1,1,1);
 }
-.volumeControl::-webkit-slider-thumb, .volumeControl::-moz-range-thumb{
+.volumeControl::-webkit-slider-thumb{
   -webkit-appearance: none;
-  width: 7px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+}
+.volumeControl::-moz-range-track{
   height: 7px;
+  background-color: rgba(255,255,255, .35);
+  border: none;
+  outline: none;
+}
+.volumeControl::-moz-range-thumb{
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   background-color: #fff;
   cursor: pointer;
